# Autonomous-Test-Evaluation-Framework

./: README.md
app_msg/demo_float_object/: CMakeLists.txt  package.xml
app_src/demo_ATEF/: CMakeLists.txt  package.xml
app_src/demo_ATEF/include/: BasicNode.h
app_src/demo_ATEF/src/: AppMain.cpp  BasicNode.cpp
app_src/demo_atef/: CMakeLists.txt  package.xml
app_src/demo_atef/include/: BasicNode.h
app_src/demo_atef/src/: AppMain.cpp  BasicNode.cpp
framework_msg/atef_msgs/: CMakeLists.txt  README.md  package.xml
framework_msg/atef_msgs/include/: ATEF_msgs.hpp
framework_msg/atef_msgs/src/: ATEF_msgs.cpp
framework_msg/int_serial_msg/: CMakeLists.txt  README.md  package.xml
framework_src/ATEF_BaseCombiner/: CMakeLists.txt  package.xml
framework_src/ATEF_BaseCombiner/src/: ATEF_BaseCombiner.cpp
framework_src/ATEF_BaseNode/: CMakeLists.txt  package.xml
framework_src/ATEF_BaseNode/include/: ATEF_BaseNode.h  SerialObject.h
framework_src/ATEF_BaseNode/src/: ATEF_BaseNode.cpp
framework_src/ATEF_BaseSplitter/: CMakeLists.txt  package.xml
framework_src/ATEF_BaseSplitter/include/: ATEF_BaseSplitter.h
framework_src/ATEF_BaseSplitter/src/: ATEF_BaseSplitter.cpp
framework_src/atef_base_combiner/: CMakeLists.txt  package.xml
framework_src/atef_base_combiner/include/: ATEF_BaseCombiner.h
framework_src/atef_base_combiner/src/: ATEF_BaseCombiner.cpp
framework_src/atef_base_node/: CMakeLists.txt  package.xml
framework_src/atef_base_node/include/: ATEF_BaseNode.h  SaveState.h
framework_src/atef_base_node/src/: ATEF_BaseNode.cpp
framework_src/atef_base_splitter/: CMakeLists.txt  package.xml
framework_src/atef_base_splitter/src/: ATEF_BaseSplitter.cpp
framework_src/atef_combiner/: CMakeLists.txt  package.xml
framework_src/atef_combiner/include/: ATEF_Combiner.h
framework_src/atef_combiner/src/: ATEF_Combiner.cpp
framework_src/atef_node/: CMakeLists.txt  package.xml
framework_src/atef_node/include/: ATEF_Node.h  Keyboard.h  SaveState.h  SaveStateManager.h  SerialObject.h
framework_src/atef_node/src/: ATEF_Node.cpp  SaveState.cpp
framework_src/atef_splitter/: CMakeLists.txt  package.xml
framework_src/atef_splitter/include/: ATEF_Splitter.h
framework_src/atef_splitter/src/: ATEF_Splitter.cpp
launch_scripts/: atef_demo.py
